# kbbi-gtk

./: .gitmodules  CMakeLists.txt  README.md  application.desktop.in  makefile
src/: lib.c  lib.h  main.c  ui.c  ui.h
